--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,19 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/assets/css/styles.scss"
             ],
             "scripts": []
           },
           "configurations": {
+            "local": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -71,6 +79,10 @@
             "browserTarget": "angular-lazy-load:build"
           },
           "configurations": {
+            "local": {
+              "hmr": true,
+              "browserTarget": "angular-lazy-load:build:local"
+            },
             "production": {
               "browserTarget": "angular-lazy-load:build:production"
             }
@@ -94,7 +106,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/assets/css/styles.scss"
             ],
             "scripts": []
           }
