--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "angular-lazy-load",
   "version": "0.0.0",
   "scripts": {
+    "start": "ng serve --configuration local --open --aot --hmr --port 4201 --watch",
+    "esw": "esw . --clear --ext .ts -w --color",
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,25 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0-next.5",
-    "@angular/common": "~11.0.0-next.5",
-    "@angular/compiler": "~11.0.0-next.5",
-    "@angular/core": "~11.0.0-next.5",
-    "@angular/forms": "~11.0.0-next.5",
-    "@angular/platform-browser": "~11.0.0-next.5",
-    "@angular/platform-browser-dynamic": "~11.0.0-next.5",
-    "@angular/router": "~11.0.0-next.5",
+    "@angular/animations": "^10.1.5",
+    "@angular/common": "^10.1.5",
+    "@angular/compiler": "^10.1.5",
+    "@angular/core": "^10.1.5",
+    "@angular/forms": "^10.1.5",
+    "@angular/platform-browser": "^10.1.5",
+    "@angular/platform-browser-dynamic": "^10.1.5",
+    "@angular/router": "^10.1.5",
+    "@ngxs/hmr-plugin": "^3.7.0",
+    "@ngxs/router-plugin": "^3.7.0",
+    "@ngxs/store": "^3.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.0-next.6",
-    "@angular/cli": "~11.0.0-next.6",
-    "@angular/compiler-cli": "~11.0.0-next.5",
+    "@angular-devkit/build-angular": "^0.1001.6",
+    "@angular-eslint/eslint-plugin": "^0.5.0-beta.4",
+    "@angular/cli": "^10.1.6",
+    "@angular/compiler-cli": "^10.1.5",
+    "@ngxs/devtools-plugin": "^3.7.0",
     "@types/jasmine": "~3.5.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.11.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
