--- a/angular.json
+++ b/angular.json
@@ -76,7 +76,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-lazy-load:build"
+            "browserTarget": "angular-lazy-load:build",
+            "hmrWarning": false
           },
           "configurations": {
             "local": {
