--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/css/styles.scss"
+              "src/assets/css/styles.scss",
             ],
             "scripts": []
           },
