--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^10.1.5",
     "@angular/core": "^10.1.5",
     "@angular/forms": "^10.1.5",
+    "@angular/localize": "^10.1.6",
     "@angular/platform-browser": "^10.1.6",
     "@angular/platform-browser-dynamic": "^10.1.5",
     "@angular/router": "^10.1.5",
@@ -25,10 +26,19 @@
     "@ngxs/store": "^3.7.0",
     "@progress/kendo-angular-buttons": "^5.5.1",
     "@progress/kendo-angular-common": "^1.2.3",
+    "@progress/kendo-angular-dropdowns": "^4.3.2",
+    "@progress/kendo-angular-grid": "^4.8.0",
+    "@progress/kendo-angular-icons": "^0.2.1",
+    "@progress/kendo-angular-inputs": "^6.7.2",
+    "@progress/kendo-angular-intl": "^2.0.3",
     "@progress/kendo-angular-l10n": "^2.0.2",
+    "@progress/kendo-angular-label": "^2.3.3",
     "@progress/kendo-angular-layout": "^5.0.4",
     "@progress/kendo-angular-popup": "^3.0.6",
     "@progress/kendo-angular-progressbar": "^1.0.0",
+    "@progress/kendo-angular-tooltip": "^2.1.5",
+    "@progress/kendo-drawing": "^1.9.2",
+    "@progress/kendo-svg-icons": "^0.1.0",
     "@progress/kendo-theme-material": "^3.21.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
