--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/css/styles.scss"
+              "src/assets/css/styles.scss",
             ],
             "scripts": []
           },
@@ -76,7 +76,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-lazy-load:build"
+            "browserTarget": "angular-lazy-load:build",
+            "hmrWarning": false
           },
           "configurations": {
             "local": {
