--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "@typescript-eslint/no-empty-function": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-extra-semi": "warn",
-    "@typescript-eslint/no-inferrable-types": "warn",
+    "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-this-alias": "warn"
   }
 }
