--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,24 +17,7 @@
   "explorer.confirmDragAndDrop": false,
   "typescript.updateImportsOnFileMove.enabled": "never",
   "workbench.list.openMode": "doubleClick",
-  "files.exclude": {
-    "**/e2e": false,
-    "**/.eslintignore": false,
-    "**/.eslintrc": false,
-    "**/karma.conf.js": false,
-    "**/package.json": false,
-    "**/README_Example.md": false,
-    "**/README.md": false,
-    "**/src/environments": false,
-    "**/src/modules/module-a": false,
-    "**/src/modules/module-b": false,
-    "**/src/modules/module-c": false,
-    "**/src/modules/index.ts": false,
-    "**/src/test.ts": false,
-    "**/debug.log": false,
-    "**/src/assets": false,
-    "**/src/app": false
-  },
+  "files.exclude": {},
   "workbench.colorCustomizations": {
     "activityBar.background": "#af1339",
     "activityBar.activeBackground": "#af1339",
